new ADT is done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(test_tree tests/test.cpp src/treeNode.cpp src/treeListNode.cpp src/treeList.cpp src/tree.cpp)
-target_include_directories(test_tree PUBLIC ${PROJECT_SOURCE_DIR}/include)
+add_executable(treeSO main/treeSO.cpp src/treeNode.cpp src/treeListNode.cpp src/treeList.cpp src/tree.cpp src/linkedList.cpp src/node.cpp)
+target_include_directories(treeSO PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 
 
